archetect-templating/tests/snapshots/test_templates__vm@err_bad_test_arguments.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% for item in seq %}\n  {% if item is even(42) %}\n    {{ item }}\n  {% endif %}\n{% endfor %}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: archetect_templating/tests/inputs/err_bad_test_arguments.txt
---
!!!ERROR!!!

Error {
    kind: TooManyArguments,
    name: "err_bad_test_arguments.txt",
    line: 2,
}

too many arguments (in err_bad_test_arguments.txt:2)
------------------------- err_bad_test_arguments.txt --------------------------
   1 | {% for item in seq %}
   2 >   {% if item is even(42) %}
     i                 ^^^^^^^^ too many arguments
   3 |     {{ item }}
   4 |   {% endif %}
   5 | {% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    item: 1,
    loop: Loop {
        index0: 0,
        index: 1,
        length: 3,
        revindex: 3,
        revindex0: 2,
        first: true,
        last: false,
        depth: 1,
        depth0: 0,
        previtem: Undefined,
        nextitem: 2,
    },
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------

