archetect-templating/tests/snapshots/test_templates__vm@err_missing_nested_filter.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ \"foo\"|upper|missingFilter|lower }}"
info: {}
input_file: archetect_templating/tests/inputs/err_missing_nested_filter.txt
---
!!!ERROR!!!

Error {
    kind: UnknownFilter,
    detail: "filter missingFilter is unknown",
    name: "err_missing_nested_filter.txt",
    line: 1,
}

unknown filter: filter missingFilter is unknown (in err_missing_nested_filter.txt:1)
------------------------ err_missing_nested_filter.txt ------------------------
   1 > {{ "foo"|upper|missingFilter|lower }}
     i                ^^^^^^^^^^^^^ unknown filter
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

