archetect-templating/tests/snapshots/test_templates__vm@err_self_macro_call.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% macro x() %}{{ x() }}{% endmacro %}\n{{ x() }}"
info: {}
input_file: archetect_minijinja/tests/inputs/err_self_macro_call.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "recursion limit exceeded",
    name: "err_self_macro_call.txt",
    line: 1,
}

invalid operation: recursion limit exceeded (in err_self_macro_call.txt:1)
--------------------------- err_self_macro_call.txt ---------------------------
   1 > {% macro x() %}{{ x() }}{% endmacro %}
     i                   ^^^ invalid operation
   2 | {{ x() }}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    x: <macro x>,
}
-------------------------------------------------------------------------------

